8078866: compiler/eliminateAutobox/6934604/TestIntBoxing.java assert(p_f->Opcode() == Op_IfFalse) failed

Bail out from range check elimination if pre loop is not found

Reviewed-by: kvn